# asterc

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  gap.yml
.github/workflows/: ci.yml
ast/: Cargo.toml
ast/src/: context_snapshot.rs  diagnostic.rs  eval_error.rs  expr.rs  lib.rs  span.rs  symbol_index.rs  type_env.rs  type_table.rs  types.rs
aster-fmt/: Cargo.toml
aster-fmt/src/: config.rs  doc.rs  lib.rs  rules.rs  tests.rs  trivia.rs
aster-pkg/: Seedfile  test_eval.aster  test_seedfile.aster
aster-pkg/src/: eval.aster  lock.aster  main.aster  seedfile.aster  serialize.aster
codegen/: Cargo.toml  build.rs
codegen/benches/: async_runtime_matrix.rs
codegen/src/: aot.rs  asm_source.rs  async_runtime.rs  compile_shared.rs  config.rs  eval_pipeline.rs  host_function_registry.rs  jit.rs  lib.rs  runtime.rs  runtime_sigs.rs  runtime_source.rs  tests.rs  translate.rs  types.rs
codegen/src/green/: blocking.rs  context.rs  mod.rs  poller.rs  scheduler.rs  stack.rs  tests.rs  thread.rs
codegen/src/green/asm/: aarch64.S  x86_64.S
codegen/src/runtime/: alloc.rs  aot_main.rs  channel.rs  crypto.rs  error.rs  fs.rs  gc.rs  introspection.rs  io.rs  list.rs  map.rs  mod.rs  mutex.rs  numeric.rs  print.rs  process.rs  runtime_eval.rs  string.rs  sys.rs  task.rs
examples/: 01_literals.aster  02_expressions_and_binary_ops.aster  03_simple_function.aster  04_functions_using_vars.aster  05_operators_and_precedence.aster  06_comparisons_and_logic.aster  07_mixed_expressions.aster  08_float_promotion.aster  09_collections.aster  10_modules_and_builtins.aster  11_generics_and_traits.aster  12_async_errors_matching.aster  13_throws_and_extends.aster  14_dynamic_receiver.aster  hello.aster
examples/executable/: dynamic_receiver.aster  fibonacci.aster  hello.aster  range_for.aster
examples/spec/: 10_modules_and_builtins.aster  11_generics_and_traits.aster  12_async_errors_matching.aster  13_throws_and_extends.aster
fir/: Cargo.toml
fir/src/: builtins.rs  eval_context.rs  exprs.rs  lib.rs  lower.rs  module.rs  stmts.rs  tests.rs  types.rs  validate.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  tests.rs  token.rs
parser/src/: class_trait.rs  expr.rs  lib.rs  tests.rs  type_parser.rs
plans/: formatter.md
src/: build_dir.rs  main.rs  manifest.rs
tests/: aot_cli.rs  async_call_modes.rs  async_call_modes_consistency.rs  audit.rs  audit_round3.rs  channels.rs  closures.rs  const_bindings.rs  data_sharing.rs  default_params.rs  diagnostic_templates.rs  diagnostics.rs  drop_close.rs  eq_protocol.rs  error_handling.rs  examples.rs  execution_cli.rs  expressions.rs  generic_constraints.rs  generics_traits.rs  inline_generics.rs  io_primitives.rs  iterable.rs  iterator.rs  lambda_no_return_type.rs  language_features.rs  map_literals.rs  modules.rs  multi_channels.rs  must_consume.rs  mutex.rs  named_args.rs  numeric_methods.rs  ord_protocol.rs  parametric_traits.rs  pattern_matching.rs  pattern_matching_async.rs  printable_protocol.rs  random.rs  ranges.rs  (+9 more)
typecheck/: Cargo.toml
(+132 files in other folders)
