[package]
name = "asterc"
version = "0.1.0"
edition = "2024"

[dependencies]
lexer = { path = "lexer" }
ast = { path = "ast" }
parser = { path = "parser" }
typecheck = { path = "typecheck" }
fir = { path = "fir" }
codegen = { path = "codegen" }
aster-fmt = { path = "aster-fmt" }
ariadne = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = [
    "ast",                # AST data structures + serialization
    "lexer",             # tokenization
    "parser",          # CST/AST builder
    "typecheck",   # type inference/checking
    "fir",             # Flat Intermediate Representation (AST → FIR lowering)
    "codegen",         # FIR → machine code (Cranelift JIT + AOT)
    "aster-fmt",       # source code formatter
    # "vm",           # interpreter/bytecode runtime
]
resolver = "2"

[dev-dependencies]
serde_json = "1"
