[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
fir = { path = "../fir" }
cranelift-codegen = "0.129"
cranelift-frontend = "0.129"
cranelift-jit = "0.129"
cranelift-object = "0.129"
cranelift-module = "0.129"
cranelift-native = "0.129"

[dev-dependencies]
ast = { path = "../ast" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
typecheck = { path = "../typecheck" }
