[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
fir = { path = "../fir" }
cranelift-codegen = "0.129"
cranelift-frontend = "0.129"
cranelift-jit = "0.129"
cranelift-object = "0.129"
cranelift-module = "0.129"
cranelift-native = "0.129"
crossbeam-deque = "0.8"
getrandom = "0.2"
libc = "0.2"
sha2 = "0.10"

[build-dependencies]
cc = "1"

[dev-dependencies]
ast = { path = "../ast" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
typecheck = { path = "../typecheck" }
